--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -43,7 +43,10 @@ h3, h4, h5 {
 }
 
 h3 {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
 }
 
 h4 {
