--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -50,6 +50,7 @@ $btn-font-family:             lcars;
 @import '~bootstrap/scss/type';
 @import '~bootstrap/scss/buttons';
 @import '~bootstrap/scss/spinners';
+@import '~bootstrap/scss/utilities/background';
 @import '~bootstrap/scss/utilities/borders';
 @import '~bootstrap/scss/utilities/display';
 @import '~bootstrap/scss/utilities/flex';
