- additional accessibility improvements

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -309,7 +309,7 @@ select {
     max-width: 100%;
     width: 280px;
     color: white;
-    background-color: #906F9A;
+    background-color: $lcars-purple;
     padding: 5px;
     border-radius: 8px;
     border: 0;
