add additional civilian outfit; add Ambassadors as a generated NPC type; fixes for modal behaviour

--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -18,6 +18,7 @@ $lcars-light-pink: #DE84B7;
 $lcars-dull-pink: #c37ba4;
 $lcars-very-light-pink: #f7bbdd;
 
+$breadcrumb-divider-color: #999999;
 $breadcrumb-active-color: #999999;
 
 $primary: $lcars-purple;
