Add additional random options for species

--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -67,6 +67,10 @@ h1 .btn-link {
     text-transform: uppercase;
 }
 
+.dropdown.btn-group .btn-sm {
+    font-size: x-large;
+}
+
 .btn-group .btn-sm {
     font-size: large;
 }
