Additional Headers; fix old-fashioned buttons; beginnings of tables

--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -359,6 +359,10 @@ div.align-items-stretch > label.textinput-label {
         max-width: 150px;
     }
 
+    .dropdown.btn-group .btn-sm {
+        font-size: large;
+    }
+
     .btn-group .btn-sm {
         font-size: 14px;
     }
