--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -295,6 +295,21 @@ input {
     padding: 6px;
 }
 
+input[type=search] {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+input[type=search]::-webkit-search-cancel-button{
+
+    -webkit-appearance: none;
+    height: 24px;
+    width: 24px;
+    margin-left: .4em;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23777'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
+    cursor: pointer;
+}
+
 textarea {
     width: 300px;
     color: white !important;
