--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -24,6 +24,7 @@ $breadcrumb-active-color: #999999;
 $primary: $lcars-purple;
 $danger: $lcars-salmon;
 $info: #F9AC76;
+$success: #9999ff;
 
 $modal-content-bg: $lcars-brighter-purple;
 $modal-content-color: white;
