Additional revisions to table functions; - tweaks to the handling of Open Graph and header information; - additional test for name generation; - add more talents to translation

--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -25,6 +25,7 @@ $primary: $lcars-purple;
 $danger: $lcars-salmon;
 $info: #F9AC76;
 $success: #9999ff;
+$warning: $lcars-light-orange;
 
 $modal-content-bg: $lcars-brighter-purple;
 $modal-content-color: white;
