layout changes on the NPC page to better support small screen interfaces. Some look-and-feel tweaks. Bug identified #189

--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -49,6 +49,7 @@ $breadcrumb-padding-x: 1.5rem;
 $btn-border-radius:           1.25rem;
 $btn-border-radius-lg:        1.25rem;
 $btn-border-radius-sm:        1.25rem;
+$btn-border-width:            0px;
 
 $btn-font-family:             lcars;
 
