- add Russian translations; update font to see if we can include Cyrillic characters; - initial work on Starship talents.

--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'lcars';
-    src: url('../fonts/tt0106m0.TTF') format('truetype');
+    src: url('../fonts/lcars_font.TTF') format('truetype');
     font-weight: lighter;
     font-style: normal;
 }
