better support for handling extension species for translation purposes

--- a/WebTools/src/scss/components.scss
+++ b/WebTools/src/scss/components.scss
@@ -25,6 +25,10 @@
     text-transform: uppercase;
 }
 
+.btn.btn-outline-secondary, .btn.btn-outline-primary {
+    border-width: 1px;
+}
+
 h1 .btn-link {
     font-size: medium;
 }
