--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -1,4 +1,10 @@
-﻿.d-md-table-cell {
+﻿:root {
+    --lcars-font: lcars;
+}
+
+@import "lang-ru";
+
+.d-md-table-cell {
     display: none !important;
 }
 
@@ -84,7 +90,7 @@ h5 {
     .stat-name {
         padding-top: 2px;
         padding-bottom: 2px;
-        font-family: lcars;
+        font-family: var(--lcars-font);
         font-size: 16px;
         flex-grow: 1;
         flex-shrink: 1;
@@ -151,7 +157,7 @@ h5 {
     text-transform: uppercase;
     height: 30px;
     margin: 0 0.25rem 0 0;
-    font-family: lcars;
+    font-family: var(--lcars-font);
     font-size: large;
     background-color: $lcars-purple;
     line-height: normal;
@@ -408,7 +414,7 @@ a:hover {
     background: #F89B24;
     padding: 10px;
     margin-bottom: 10px;
-    font-family: lcars;
+    font-family: var(--lcars-font);
     font-size: x-large;
     text-transform: uppercase;
     width: 25%;
@@ -419,7 +425,7 @@ a:hover {
 .header-text {
     color: black;
     background-color: #FFCC66;
-    font-family: lcars;
+    font-family: var(--lcars-font);
     font-size: 40px;
     text-transform: uppercase;
     border-radius: 20px;
@@ -490,7 +496,7 @@ h2.header-text {
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        font-family: lcars;
+        font-family: var(--lcars-font);
 		font-size: x-large;
         text-transform: uppercase;
         line-height: 1;
@@ -572,7 +578,7 @@ h2.header-text {
 
     .lcar-footer .lcar-text {
         color: black;
-        font-family: lcars;
+        font-family: var(--lcars-font);
         font-size: 15px;
         padding: 3px 6px 3px 6px;
         text-transform: uppercase;
@@ -590,7 +596,7 @@ h2.header-text {
 .lcar-content-news {
     color: black;
     text-align: right;
-    font-family: lcars;
+    font-family: var(--lcars-font);
     font-size: x-large;
     max-width: 120px;
     padding: 3px 11px 6px 0px;
@@ -603,7 +609,7 @@ h2.header-text {
 .lcar-content-left-button {
     color: black;
     text-align: right;
-    font-family: lcars;
+    font-family: var(--lcars-font);
     font-size: x-large;
     max-width: 120px;
     padding: 3px 11px 6px 0px;
@@ -743,7 +749,7 @@ table.aspect-list td:first-child {
     padding: 10px;
     border-radius: 20px;
     text-align: right;
-    font-family: lcars;
+    font-family: var(--lcars-font);
     font-size: large;
     text-transform: uppercase;
     width: 144px;
@@ -801,7 +807,7 @@ table.aspect-list td:first-child {
 }
 
 #version {
-    font-family: lcars;
+    font-family: var(--lcars-font);
     font-size: large;
 }
 
