--- a/WebTools/src/scss/main.scss
+++ b/WebTools/src/scss/main.scss
@@ -4,6 +4,8 @@
     font-weight: lighter;
     font-style: normal;
 }
+@import "../fonts/bebas-neue";
+@import "../fonts/oswald";
 
 $lcars-salmon: #CC6666;
 $lcars-purple: #8C6996;
