--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -4,6 +4,20 @@
 
 @import "lang-ru";
 
+@mixin scroll {
+  &::-webkit-scrollbar-thumb {
+    background-color: #F89B24;
+    border-radius: 50px;
+  }
+
+  &::-webkit-scrollbar {
+    background-color: #F89B2480;
+    border-radius: 50px;
+    padding: 0;
+    margin: 0;
+  }
+}
+
 .d-md-table-cell {
     display: none !important;
 }
@@ -40,6 +54,7 @@ p {
     margin: 20px 20px 30px 20px;
     overflow-x: hidden;
     overflow-y: auto;
+    @include scroll;
 }
 
 h3, h4, h5 {
