--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -51,7 +51,7 @@ p {
 }
 
 #app {
-    margin: 20px 20px 30px 20px;
+    margin: 20px 0 30px 20px;
     overflow-x: hidden;
     overflow-y: auto;
     @include scroll;
@@ -842,7 +842,7 @@ table.aspect-list td:first-child {
 @media screen and (min-width: 0px) and (max-width: 768px) {
 
     #app {
-        margin: 10px 14px 5px -20px;
+        margin: 10px 0 5px -20px;
     }
 
     .desc-text {
