apply LCARS text font (Intl)

--- a/WebTools/src/scss/attributes.scss
+++ b/WebTools/src/scss/attributes.scss
@@ -9,7 +9,7 @@
 }
 
 .attribute-container {
-    font-family: var(--lcars-font);
+    font-family: var(--lcars-header-font);
     text-transform: uppercase;
     font-size: 18px;
     display: inline-block;
