--- a/WebTools/src/scss/lang-ru.scss
+++ b/WebTools/src/scss/lang-ru.scss
@@ -1,9 +1,5 @@
 :root[lang=ru] {
-  --lcars-font: Bebas Neue;
-
-  body {
-    font-family: Oswald, sans-serif;
-  }
+  --lcars-header-font: Bebas Neue;
 
   .stat-value, .pill-left, .pill-right {
     line-height: 1;
