--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -41,6 +41,10 @@ p {
     font-weight: normal;
 }
 
+.markdown-sm p {
+    font-size: small !important;
+}
+
 .container p, .container ul li {
     color: white;
     font-size: large;
