Per #219, add tracks from 2nd edition. Minor tweaks to character sheets

--- a/WebTools/src/scss/common.scss
+++ b/WebTools/src/scss/common.scss
@@ -45,7 +45,7 @@ p {
     font-size: small !important;
 }
 
-.container p, .container ul li {
+.container ul li {
     color: white;
     font-size: large;
     font-weight: normal;
